--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
             </nav>
         </div>
     </header>
+
     <section id="hero">
+        <div class="slider">
+            <img src="images/image1.jpg" alt="Image 1">
+            <img src="images/image2.jpg" alt="Image 2">
+            <img src="images/image3.jpg" alt="Image 3">
+        </div>
         <h2>Your Trusted Partner in Global Business</h2>
         <p>Innovative solutions for a connected world.</p>
     </section>
+
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
@@ -31,6 +38,7 @@
             <p>Contact: 0556280251</p>
         </div>
     </section>
+
     <section id="services">
         <div class="container">
             <h2>Our Services</h2>
@@ -42,10 +50,33 @@
             </ul>
         </div>
     </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <form action="submit_form.php" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 WASOG LLC. All Rights Reserved.</p>
+            <div class="social-media">
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            </div>
         </div>
     </footer>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
